make logo https

--- a/web/static/css/phoenix.css
+++ b/web/static/css/phoenix.css
@@ -31,7 +31,7 @@ form.link, form.button {
   height: 71px;
   display: inline-block;
   margin-bottom: 1em;
-  background-image: url("http://i.imgur.com/ysHQg7E.png");
+  background-image: url("//i.imgur.com/ysHQg7E.png");
   background-size: 519px 71px;
 }
 
