--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -30,6 +30,7 @@
       </main>
 
     </div> <!-- /container -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/turbolinks/5.0.0/turbolinks.min.js"></script>
     <script src="<%= static_path(@conn, "/js/app.js") %>"></script>
   </body>
 </html>
