--- a/web/static/css/app.css
+++ b/web/static/css/app.css
@@ -22,6 +22,9 @@ h1 {
     box-sizing: border-box;
     position: relative;
 }
+.row {
+    display: flex;
+}
 .row:nth-child(odd) .piece:nth-child(odd) {
     background-color: #8a6d3b;
 }
