--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,1 +1,71 @@
 /* This file is for your main application css. */
+
+/* Board CSS */
+.piece {
+    width: 12%;
+    height: 0;
+    display: inline-block;
+    margin: 0;
+    padding: 0 0 12% 0;
+    background-color: #eee;
+    background-size: cover;
+    box-sizing: border-box;
+    position: relative;
+}
+.row {
+    display: flex;
+}
+.row:nth-child(odd) .piece:nth-child(even) {
+    background-color: #8a6d3b;
+}
+.row:nth-child(even) .piece:nth-child(odd) {
+    background-color: #8a6d3b;
+}
+
+.piece.highlight:after {
+  content: '';
+  background-color: rgba(100, 220, 100, 0.5);
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+}
+
+.piece.black.pawn {
+    background-image: url(https://upload.wikimedia.org/wikipedia/commons/c/c7/Chess_pdt45.svg);
+}
+.piece.black.rook {
+    background-image: url(https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_rdt45.svg);
+}
+.piece.black.knight {
+    background-image: url(https://upload.wikimedia.org/wikipedia/commons/e/ef/Chess_ndt45.svg);
+}
+.piece.black.bishop {
+    background-image: url(https://upload.wikimedia.org/wikipedia/commons/9/98/Chess_bdt45.svg);
+}
+.piece.black.queen {
+    background-image: url(https://upload.wikimedia.org/wikipedia/commons/4/47/Chess_qdt45.svg);
+}
+.piece.black.king {
+    background-image: url(https://upload.wikimedia.org/wikipedia/commons/f/f0/Chess_kdt45.svg);
+}
+
+.piece.white.pawn {
+    background-image: url(https://upload.wikimedia.org/wikipedia/commons/4/45/Chess_plt45.svg);
+}
+.piece.white.rook {
+    background-image: url(https://upload.wikimedia.org/wikipedia/commons/7/72/Chess_rlt45.svg);
+}
+.piece.white.knight {
+    background-image: url(https://upload.wikimedia.org/wikipedia/commons/7/70/Chess_nlt45.svg);
+}
+.piece.white.bishop {
+    background-image: url(https://upload.wikimedia.org/wikipedia/commons/b/b1/Chess_blt45.svg);
+}
+.piece.white.queen {
+    background-image: url(https://upload.wikimedia.org/wikipedia/commons/1/15/Chess_qlt45.svg);
+}
+.piece.white.king {
+    background-image: url(https://upload.wikimedia.org/wikipedia/commons/4/42/Chess_klt45.svg);
+}
